--- a/web/css/site.css
+++ b/web/css/site.css
@@ -773,9 +773,6 @@ div.dataTables_wrapper {
 .inner-sub-content {
     padding: 15px;
 }
-.ui-dialog .ui-dialog-titlebar-close {
-   visibility: hidden;
-}
 .a:hover{
     color: #0000ff;
 }
@@ -803,4 +800,92 @@ div.dataTables_wrapper {
 }
  #GB_window {
     margin-top: 90px;
+}
+
+
+input[type="checkbox"] {
+    margin: 0px 0 0;
+    -webkit-appearance: none;
+    border: 1px solid #a9a9a9;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    padding: 9px;
+    border-radius: 3px;
+    display: inline-block;
+    position: relative;
+}
+input[type="checkbox"]:active, input[type="checkbox"]:checked:active {
+    box-shadow:0 0 0 rgba(0,0,0,0.05), inset 0 0 0 rgba(0,0,0,0.1);
+}
+
+input[type="checkbox"]:checked {
+    background-color: #3441AC;
+    border: 1px solid #a9a9a9;
+    color: #99a1a7;
+}
+input[type="checkbox"]:checked:after {
+    content: '\2714';
+    font-size: 14px;
+    position: absolute;
+    top: 0px;
+    left: 3px;
+    color: #99a1a7;
+}
+.big-checkbox {
+    padding: 18px;
+}
+
+.big-checkbox:checked:after {
+    font-size: 28px;
+    left: 6px;
+}
+input[type="radio"] {
+    margin: 0px 0 0;
+    -webkit-appearance: none;
+    border: 1px solid #a9a9a9;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    padding: 9px;
+    border-radius: 50px;
+    display: inline-block;
+    position: relative;
+}
+
+input[type="radio"]:checked:after {
+    content: ' ';
+    width: 12px;
+    height: 12px;
+    border-radius: 50px;
+    position: absolute;
+    top: 3px;
+    background: #3441AC;
+    box-shadow: inset 0px 0px 10px rgba(0,0,0,0.3);
+    text-shadow: 0px;
+    left: 3px;
+    font-size: 32px;
+}
+
+input[type="radio"]:checked {
+    background-color: #e9ecee;
+    color: #99a1a7;
+    border: 1px solid #3441AC;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1), inset 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+input[type="radio"]:active, input[type="radio"]:checked:active {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+.big-radio {
+    padding: 16px;
+}
+
+.big-radio:checked:after {
+    width: 24px;
+    height: 24px;
+    left: 4px;
+    top: 4px;
+}
+input[type="file"]:focus, input[type="radio"]:focus, input[type="checkbox"]:focus {
+    outline: thin dotted;
+    outline: 0px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
 }
